# TriliumRunner

./: CMakeLists.txt  LICENSE  README.md  metadata.json  triliumrunner.cpp  triliumrunner.h
